--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
+
+# Jetbrain Rider Cache
+.idea/
+Assets/Plugins/Editor/JetBrains*
+
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
 
